exports[`borderStyle properly applies a value when passed only one 1`] = `
Object {
  "borderBottomStyle": "solid",
  "borderLeftStyle": "solid",
  "borderRightStyle": "solid",
  "borderTopStyle": "solid",
}
`;

exports[`borderStyle properly applies values when passed four 1`] = `
Object {
  "borderBottomStyle": "dotted",
  "borderLeftStyle": "double",
  "borderRightStyle": "dashed",
  "borderTopStyle": "solid",
}
`;

exports[`borderStyle properly applies values when passed three 1`] = `
Object {
  "borderBottomStyle": "dotted",
  "borderLeftStyle": "dashed",
  "borderRightStyle": "dashed",
  "borderTopStyle": "solid",
}
`;

exports[`borderStyle properly applies values when passed two 1`] = `
Object {
  "borderBottomStyle": "solid",
  "borderLeftStyle": "dashed",
  "borderRightStyle": "dashed",
  "borderTopStyle": "solid",
}
`;
